<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_500"
    android:fontFamily="@font/oswald_semibold"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/top_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bar"
        android:fontFamily="@font/oswald_semibold"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/connection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oswald_semibold"
        android:text="@string/connection"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar" />

    <LinearLayout
        android:id="@+id/devices"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/device_bar"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/connection">

        <ImageButton
            android:id="@+id/refresh"
            android:layout_width="48dp"
            android:layout_height="50dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/imgRefresh"
            android:onClick="refresh"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/baseline_refresh_24" />

        <Spinner
            android:id="@+id/devicesList"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:contentDescription="@string/app_name" />
    </LinearLayout>

    <Button
        android:id="@+id/connect"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn"
        android:fontFamily="@font/oswald_semibold"
        android:onClick="connect"
        android:text="@string/connect"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@id/disconnect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/devices" />


    <Button
        android:id="@+id/disconnect"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn"
        android:fontFamily="@font/oswald_semibold"
        android:onClick="btnDisconnect"
        android:text="@string/disconnect"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/connect"
        app:layout_constraintTop_toBottomOf="@id/devices" />


    <TextView
        android:id="@+id/controls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/oswald_semibold"
        android:text="@string/controls"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/connect" />

    <Button
        android:id="@+id/up"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn"
        android:fontFamily="@font/oswald_semibold"
        android:onClick="btnUp"
        android:text="@string/up"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@id/down"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/controls" />

    <Button
        android:id="@+id/down"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn"
        android:fontFamily="@font/oswald_semibold"
        android:onClick="btnDown"
        android:text="@string/down"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/up"
        app:layout_constraintTop_toBottomOf="@id/controls" />

    <Button
        android:id="@+id/enter"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginVertical="75dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn"
        android:fontFamily="@font/oswald_semibold"
        android:onClick="btnEnter"
        android:text="@string/enter"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@id/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/up" />

    <Button
        android:id="@+id/back"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginVertical="75dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn"
        android:fontFamily="@font/oswald_semibold"
        android:onClick="btnBack"
        android:text="@string/back"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/enter"
        app:layout_constraintTop_toBottomOf="@id/down" />
</androidx.constraintlayout.widget.ConstraintLayout>