<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_500"
    android:fontFamily="@font/oswald_semibold"
    tools:context=".SendText">


    <TextView
        android:id="@+id/top_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bar"
        android:fontFamily="@font/oswald_semibold"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/btn"
        android:fontFamily="@font/oswald_semibold"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="si"
        android:ems="10"
        android:hint="@string/data"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar" />

    <Button
        android:id="@+id/back"
        android:onClick="back"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:background="@drawable/btn"
        android:fontFamily="@font/oswald_semibold"
        android:text="@string/back"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/send"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/send"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:background="@drawable/btn"
        android:fontFamily="@font/oswald_semibold"
        android:text="@string/send"
        android:textSize="24sp"
        android:onClick="send"
        app:layout_constraintStart_toEndOf="@id/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>